# edgar_mcp_server

./: README.md  pyproject.toml  requirements.txt
src/edgar_mcp_server/: server.py
